[package]
name = "parrot"
description = "A wrapper around wgpu for pigeon, designed to make things easier."
authors = ["Connor Young"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Chameko/pigeon"
version = "0.0.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
bytemuck = "1.7.3"
euclid = "0.22.6"