[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
winit = "0.26"
chrono = "0.4"
cfg-if = "1.0"
pollster = "0.2.5"
log = "0.4"
euclid = "0.22.6"
fern = "0.6"
bytemuck = { version = "1.7.3", features = ["derive"]}
pigeon-parrot = {path = "../parrot" }
egui = { version = "0.17", features = ["convert_bytemuck"] }
egui_winit_platform = { version = "0.13", features = ["clipboard", "webbrowser"]}
epi = "0.17"
thiserror = "1.0"