[package]
name = "pigeon-2d"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"
log = "0.4"
pollster = "0.2"
euclid = "0.22"
bytemuck = { version = "1.7", features = ["derive"]}
pigeon-parrot = {path = "../parrot" }
paste = "1.0"
itertools = "0.10"

[dev-dependencies]
winit = "0.26"
env_logger = "0.9"
image = "0.24"