[package]
name = "pigeon-2d"
description = "A simple, flexable, cross-platform 2D rendering library."
authors = ["Chameko"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/Chameko/pigeon"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13"
log = "0.4"
pollster = "0.2"
euclid = "0.22"
bytemuck = { version = "1.7", features = ["derive"]}
pigeon-parrot = { path = "../parrot", version = "0.4.1"}
paste = "1.0"
itertools = "0.10"

[dev-dependencies]
winit = "0.26"
env_logger = "0.9"
image = "0.24"
